--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-----experiences/skills----->
     <a href="./experiences.html"> Experiences </a>
     
-    <img src="image/canyon .jpeg">
+    <img src="image/canyon .png">
         
 </body>
 </html> 
